--- a/Web/index.html
+++ b/Web/index.html
@@ -38,7 +38,6 @@ body, html {
     <!-- Right-sided navbar links -->
     <div class="w3-right w3-hide-small">
       <a href="#about" class="w3-bar-item w3-button"><i class="fas fa-exclamation"></i> ABOUT</a>
-      <a href="#contact" class="w3-bar-item w3-button"><i class="fa fa-envelope"></i> CONTACT</a>
     </div>
     <!-- Hide right-floated links on small screens and replace them with a menu icon -->
 
@@ -52,7 +51,6 @@ body, html {
 <nav class="w3-sidebar w3-bar-block w3-black w3-card w3-animate-left w3-hide-medium w3-hide-large" style="display:none" id="mySidebar">
   <a href="javascript:void(0)" onclick="w3_close()" class="w3-bar-item w3-button w3-large w3-padding-16">Close</a>
   <a href="#about" onclick="w3_close()" class="w3-bar-item w3-button">ABOUT</a>
-  <a href="#contact" onclick="w3_close()" class="w3-bar-item w3-button">CONTACT</a>
 </nav>
 
 <!-- Header with full-height image -->
@@ -93,14 +91,10 @@ body, html {
         <label>Ingresos mensaules</label>
       </div>
 
-      <a href="#">
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
-        <button type="submit" class="modal-submit">Continuar</button>
-
-      </a>
+      <button class="w3-button w3-black" type="submit">
+        <i class="fa fa-rocket"></i> Continuar
+      </button>
+   
     </form>
   
   </div>
@@ -133,13 +127,9 @@ body, html {
         <label>Gastos personales mensaules</label>
       </div>
 
-      <a href="#">
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
-        <button type="submit" class="modal-submit">Continuar</button>
-      </a>
+      <button class="w3-button w3-black" type="submit">
+        <i class="fa fa-rocket"></i> Continuar
+      </button>
     </form>
   
   </div>
@@ -163,13 +153,36 @@ body, html {
         Testing
       </p>
 
-      <a href="#">
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
-        <button type="submit" class="modal-submit">Continuar</button>
-      </a>
+      <button class="w3-button w3-black" type="submit">
+        <i class="fa fa-rocket"></i> Continuar
+      </button>
+    </form>
+  
+  </div>
+  </div>
+</div>
+
+<!-- Saber más Modal -->
+<div id="saberMas" class="modal">
+    
+  <!-- Modal content -->
+  <div class="modal-content">
+    <span onclick='closeModal("saberMas")' class="close">&times;</span>
+    <div class="modal-form">
+      <br>
+    <h3>¿Qué más te gustaría saber sobre finanzas?</h3>
+    <br>
+    <form onsubmit='openAndcloseModal("modalGastos","myModal");return false'>
+
+      <div class="form-box">
+        <input id="ingresosMensuales" minlength="5" required>
+        <label>Ingresos mensaules</label>
+      </div>
+
+      <button class="w3-button w3-black" type="submit">
+        <i class="fa fa-rocket"></i> Continuar
+      </button>
+   
     </form>
   
   </div>
@@ -201,10 +214,10 @@ body, html {
 <br> <br> <br>
   <div class="w3-center">
       <button class="w3-btn w3-black" type="submit" onclick='openModal("myModal")'>
-      <i class="fas fa-chart-bar"></i> EVALUAR FINANZAS
+      <i class="fas fa-chart-bar"></i> EVALUAR TUS FINANZAS
     </button>
     <br>
-    <p class="over"><u>¿Te gustaria saber algo más sobre finanzas?</u></p>
+    <p class="over"><u onclick='openModal("saberMas")'>¿Te gustaria saber algo más sobre finanzas?</u></p>
     </div>
 </div>
 
@@ -216,54 +229,6 @@ body, html {
     <p id="caption" class="w3-opacity w3-large"></p>
   </div>
 </div>
-
-<!-- Skills Section 
-<div class="w3-container w3-light-grey w3-padding-64">
-  <div class="w3-row-padding">
-    <div class="w3-col m6">
-      <h3>50/20/30</h3>
-      <p>El 50% para tus gastos más básicos, el 20% para ahorros y el 30% para tus gastos personales.</p>
-      <p>Esta conocida regla, se empieza a aplicar en distintos países, como Estados Unidos,<br>
-      siendo un hábito frecuente a la hora de distribuir los ingresos.</p>
-    </div>
-    <div class="w3-col m6">
-      <p class="w3-wide"><i class="fas fa-car w3-margin-right"></i>Gastos básicos</p>
-      <div class="w3-grey">
-        <div class="w3-container w3-dark-grey w3-center" style="width:50%">50%</div>
-      </div>
-      <p class="w3-wide"><i class="fas fa-piggy-bank w3-margin-right"></i>Ahorros</p>
-      <div class="w3-grey">
-        <div class="w3-container w3-dark-grey w3-center" style="width:20%">20%</div>
-      </div>
-      <p class="w3-wide"><i class="fa fa-plane w3-margin-right"></i>Gastos Personales</p>
-      <div class="w3-grey">
-        <div class="w3-container w3-dark-grey w3-center" style="width:30%">30%</div>
-      </div>
-    </div>
-  </div>
-</div>
--->
-
-<!-- Contact Section -->
-<div class="w3-container w3-light-grey" style="padding:128px 16px" id="contact">
-  <h3 class="w3-center">CONTACT</h3>
-  <p class="w3-center w3-large">Lets get in touch. Send us a message:</p>
-  <div style="margin-top:48px">
-    <br>
-    <form action="/action_page.php" target="_blank">
-      <p><input class="w3-input w3-border" type="text" placeholder="Name" required name="Name"></p>
-      <p><input class="w3-input w3-border" type="text" placeholder="Email" required name="Email"></p>
-      <p><input class="w3-input w3-border" type="text" placeholder="Subject" required name="Subject"></p>
-      <p><input class="w3-input w3-border" type="text" placeholder="Message" required name="Message"></p>
-      <p>
-        <button class="w3-button w3-black" type="submit">
-          <i class="fa fa-paper-plane"></i> SEND MESSAGE
-        </button>
-      </p>
-    </form>
-  </div>
-</div>
-
 
 <!-- Footer -->
 <footer class="w3-center w3-black w3-padding-64">
