--- a/Web/index.html
+++ b/Web/index.html
@@ -63,6 +63,14 @@ body, html {
     <p><button id="openModal" onclick='openModal("myModal")' class="w3-button w3-white w3-padding-large w3-large w3-margin-top w3-opacity w3-hover-opacity-off">Evaluar tus finanzas</button></p>
   </div> 
 
+  <div class="w3-display-right w3-text-white" style="padding:48px">
+    <div class="w3-display-right w3-text-white" style="padding:48px">
+      <span class="w3-jumbo w3-hide-small"><br></span><br>
+      <span class="w3-large">La educación transforma <b>vidas.</b></span> 
+    <p><button id="openModal" onclick='openModal("publicidad")' class="w3-button w3-white w3-padding-large w3-large w3-margin-top w3-opacity w3-hover-opacity-off">Unirse</button></p>
+  </div>
+
+
   <!--
   <div class="w3-display-bottomleft w3-text-grey w3-large" style="padding:24px 48px">
     <i class="fa fa-facebook-official w3-hover-opacity"></i>
@@ -184,6 +192,79 @@ body, html {
       <button class="w3-btn w3-black" type="submit">
         <i class="fa fa-rocket"></i> Continuar
       </button>
+   
+    </form>
+  
+  </div>
+  </div>
+</div>
+
+<!-- Publicidad más Modal -->
+<div id="publicidad" class="modal">
+    
+  <!-- Modal content -->
+  <div class="modal-content">
+    <span onclick='closeModal("publicidad")' class="close">&times;</span>
+    <div class="modal-form">
+      <br>
+    <h3>¿Qué más te gustaría saber sobre finanzas?</h3>
+    <br>
+    <form onsubmit='openAndcloseModal("modalGastos","myModal");return false'>
+
+      <div class="w3-third w3-section">
+        <ul class="w3-ul w3-white w3-hover-shadow">
+          <li class="w3-black w3-xlarge w3-padding-32">Basic</li>
+          <li class="w3-padding-16"><b>10GB</b> Storage</li>
+          <li class="w3-padding-16"><b>10</b> Emails</li>
+          <li class="w3-padding-16"><b>10</b> Domains</li>
+          <li class="w3-padding-16"><b>Endless</b> Support</li>
+          <li class="w3-padding-16">
+            <h2 class="w3-wide">$ 10</h2>
+            <span class="w3-opacity">per month</span>
+          </li>
+          <li class="w3-light-white w3-padding-24">
+            <button class="w3-button w3-black w3-padding-large">Sign Up</button>
+          </li>
+        </ul>
+      </div>
+
+      <div class="w3-third">
+        <ul class="w3-ul w3-white w3-hover-shadow">
+          <li class="w3-red w3-xlarge w3-padding-48">Pro</li>
+          <li class="w3-padding-16"><b>25GB</b> Storage</li>
+          <li class="w3-padding-16"><b>25</b> Emails</li>
+          <li class="w3-padding-16"><b>25</b> Domains</li>
+          <li class="w3-padding-16"><b>Endless</b> Support</li>
+          <li class="w3-padding-16">
+            <h2 class="w3-wide">$ 25</h2>
+            <span class="w3-opacity">per month</span>
+          </li>
+          <li class="w3-light-white w3-padding-24">
+            <button class="w3-btn w3-black" type="submit">
+              <i class="fa fa-rocket"></i> Continuar
+            </button>
+          </li>
+        </ul>
+      </div>
+
+      <div class="w3-third w3-section">
+        <ul class="w3-ul w3-white w3-hover-shadow">
+          <li class="w3-black w3-xlarge w3-padding-32">Premium</li>
+          <li class="w3-padding-16"><b>50GB</b> Storage</li>
+          <li class="w3-padding-16"><b>50</b> Emails</li>
+          <li class="w3-padding-16"><b>50</b> Domains</li>
+          <li class="w3-padding-16"><b>Endless</b> Support</li>
+          <li class="w3-padding-16">
+            <h2 class="w3-wide">$ 50</h2>
+            <span class="w3-opacity">per month</span>
+          </li>
+          <li class="w3-light-white w3-padding-24">
+            <button class="w3-button w3-black w3-padding-large">Sign Up</button>
+          </li>
+        </ul>
+      </div>
+
+<p>.</p>
    
     </form>
   
